--- a/src/themes/_variables.scss
+++ b/src/themes/_variables.scss
@@ -5,3 +5,7 @@ $bg-selected-link: #0f5304;
 $sidebar-transition-time: 0.3s;
 $sidebar-opened-width: 220px;
 $sidebar-closed-width: 84px;
+$sidebar-closed-mobile-left: -$sidebar-closed-width;
+
+$toolbar-height: 50px;
+$toolbar-background-color: #ffffff;
