--- a/src/layouts/SidebarLayout/SidebarLayout.module.scss
+++ b/src/layouts/SidebarLayout/SidebarLayout.module.scss
@@ -1,7 +1,7 @@
 @import "@/themes/_variables.scss";
 
 .container {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: row;
@@ -19,17 +19,45 @@
         }
     }
     
-    .content {
-        width: calc(100vw - $sidebar-closed-width);
-        transition: $sidebar-transition-time width ease-in-out;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        
-        &.sidebarOpened {
-            width: calc(100vw - $sidebar-opened-width);
+    .mainContent {
+
+        .toolbarContent {
+            display: none;
+        }
+
+        .pageContainer {
+            width: calc(100vw - $sidebar-closed-width);
             transition: $sidebar-transition-time width ease-in-out;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            
+            &.sidebarOpened {
+                width: calc(100vw - $sidebar-opened-width);
+                transition: $sidebar-transition-time width ease-in-out;
+            }
+        }
+    }
+}
+
+/* xs */
+@media screen and (max-width: 599px) {
+    .container {
+
+        .mainContent {
+            .toolbarContent {
+                display: block;
+            }
+
+            .pageContainer {
+                height: calc(100% - $toolbar-height);
+                width: 100vw;
+
+                &.sidebarOpened {
+                    width: 100vw;
+                }
+            }
         }
     }
 }
