--- a/src/modules/Login/pages/LoginPage/LoginPage.module.scss
+++ b/src/modules/Login/pages/LoginPage/LoginPage.module.scss
@@ -1,3 +1,39 @@
+@import "@/themes/_variables.scss";
+
 .container {
-    
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background: url("@/assets/background-login.jpeg");
+  background-size: cover;
+
+  .loginContainer {
+    height: 400px;
+    width: 340px;
+    box-shadow: 0px 0px 10px #00000080;
+    background: rgba(
+      255,
+      255,
+      255,
+      0.7
+    ); // Make sure this color has an opacity of less than 1
+    backdrop-filter: blur(8px); // This be the blur
+    border-radius: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px 30px;
+
+    form {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
 }
